<?xml version="1.0"?>
<package format="2">
  <name>interbotix_calibration_rqt</name>
  <version>0.0.0</version>
  <description>The interbotix_calibration_rqt package</description>

  <maintainer email="jelle@todo.todo">jelle</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
